[project]
name = "midjourney-api"
version = "0.1.0"
description = "Midjourney API wrapper"
authors = []
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "aiohttp>=3.8.0",
    "python-multipart>=0.0.5",  # For file uploads
    "loguru>=0.6.0",            # For logging
    "pydantic>=1.8.0",         # For data validation
    "discord-py>=2.5.2",       # For Discord integration
    "python-dotenv>=1.1.0",    # For .env file handling
    "requests>=2.32.3",        # For HTTP requests
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]
